controller/kubernetes/aws-eks/agent-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cornerstone-issuer-agent
  namespace: cornerstone-issuer
  labels:
    app: cornerstone-issuer-agent
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cornerstone-issuer-agent
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: cornerstone-issuer-agent
    spec:
      containers:
      - name: cornerstone-issuer-agent
        image: bcgovimages/aries-cloudagent:py36-1.16-1_0.7.3
        imagePullPolicy: Always
        ports:
        - name: agnt-admin-port
          containerPort: 8001
          protocol: TCP
        - name: agnt-http-port
          containerPort: 8000
          protocol: TCP
        command: [
              "/bin/bash",
              "-c", 
              "aca-py start \
              --admin '0.0.0.0' 8001 \  
              --inbound-transport http '0.0.0.0' 8000 \
              --outbound-transport http 
              --connections-invite",]
