controller/kubernetes/aws-eks/cntrl-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cornerstone-issuer
  namespace: cornerstone-issuer
  labels:
    app: cornerstone-issuer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cornerstone-issuer
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: cornerstone-issuer
    spec:
      containers:
      - name: cornerstone-issuer
        image: 149875424875.dkr.ecr.af-south-1.amazonaws.com/cornerstone-issuer:0.0.2
        imagePullPolicy: Always
        ports:
        - name: server-port
          containerPort: 8180
          protocol: TCP
        - name: agnt-adm-port
          containerPort: 8001
          protocol: TCP
        - name: agnt-port
          containerPort: 8000
          protocol: TCP
